--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,46 @@ project_admin:
 fos_user:
     resource: '@FOSUserBundle/Resources/config/routing/all.xml'
 
-
+#Çoklu dil olan projelerde default locale alıyor.
 fos_js_routing:
     resource: '@FOSJsRoutingBundle/Resources/config/routing/routing.xml'
+
+
+sg_datatables_bundle:
+    resource: "@SgDatatablesBundle/Controller/"
+    type:     annotation
+    prefix:   /sg
+
+
+
+#TODO çoklu dil olan projelerde lazımdır
+#root:
+#    path: /
+#    defaults:
+#        _controller: FrameworkBundle:Redirect:urlRedirect
+#        path: /%locale%/
+#        permanent: true
+#
+#fos_user_security:
+#    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+#    prefix: /{_locale}/
+#    defaults: { _locale: '%locale%', prefix: '%locale%' }
+#    requirements:
+#        _locale: tr|en|ru
+#
+#
+#fos_user_profile:
+#    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+#    prefix: /{_locale}/profile
+#
+#fos_user_register:
+#    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#    prefix: /{_locale}/register
+#
+#fos_user_resetting:
+#    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+#    prefix: /{_locale}/resetting
+#
+#fos_user_change_password:
+#    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+#    prefix: /{_locale}/profile
