--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,3 +1,6 @@
+parameters:
+    switch_user_param: "user_switch"
+
 security:
     encoders:
         FOS\UserBundle\Model\UserInterface: bcrypt
@@ -8,20 +11,33 @@ security:
 
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
 
     firewalls:
+#        dev:
+#            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
         main:
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
             pattern: ^/
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                check_path: "fos_user_security_check"
+                    # the user is redirected here when they need to log in
+                    # the default would be /login
+                login_path: "fos_user_security_login"
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
 
-            logout:       true
+            logout:
+                path: fos_user_security_logout
             anonymous:    true
             logout_on_user_change: true
+            switch_user: { role: ROLE_ALLOWED_TO_SWITCH, parameter: '%switch_user_param%' }
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
