--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+project_main:
+    resource: "@ProjectMainBundle/Resources/config/routing.yml"
+    prefix:   /main
+
+
 project_admin:
     resource: "@ProjectAdminBundle/Resources/config/routing.yml"
     prefix:   /
